# belief-coms

./: .gitignore  README.md  ascii_simple_pomdp.txt  main.py  pyproject.toml  simple_pomdp.py
src/: agents.py  belief_agents.py  belief_representations.py  communicating.py  communication_scheme.py  distributions.py  guessing_game.py  large_guessing_game.py  main.py  model.py  returns.py  rollout.py  routing.py  signification_pomdp.py  simple_pomdp.py  simple_pomdp_states.py  stacked_signification_decpomdp.py  stacked_signification_pomdp.py  train_simple.py  utterance_agents.py  utterance_agents_simple.py
src/agents/: belief_agents.py  utterance_agents.py  utterance_agents_simple.py
src/communication/: communication_scheme.py  game_role_assignment.py  routing.py  stacked_signification_decpomdp.py
src/envs/: env_assembly.py  factory.py  flexible_env.py  guessing_game.py  guessing_game_old.py  large_guessing_game.py
src/tools/: belief_representations.py  distributions.py  nested_belief.py  returns.py  test_belief_representations.py  utterance_rendering.py  visualization.py
src/training/: config.py  ippo.py  launch.py  optimizer.py  train.py  wandb_log.py
src/training/config/: default.yaml
src/useful_visualizations/: README.md  __init__.py  __main__.py  _figures.py  viz_belief_update.py  viz_belief_update_dash.py  viz_stacked.py
tests/: test_belief_representations.py  test_nested_belief.py
useful_visualizations/: README.md  __init__.py  viz_belief_update.py  viz_belief_update_dash.py  viz_distributions.py  viz_guessing_game.py  viz_stacked.py
