[project]
name = "belief-coms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.4.0",
    "distrax>=0.1.5",
    "flax>=0.10.4",
    "jaxmarl>=0.1.0",
    "plotly>=6.8.0",
    "tyro>=1.0.15",
    "wandb>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/communication",
    "src/envs",
    "src/tools",
    "src/training",
    "src/useful_visualizations",
]
